# ifpb-biblioteca-comunitaria

./: .gitignore  CMakeLists.txt  README.md
database/: arq-modificado.txt  books.txt  users.txt
documents/: Casos-Uso-Diagram.drawio  especificacao-sistema-biblioteca-comunitaria.docx  especificacao-sistema-biblioteca-comunitaria.odt
documents/diagramas/: Casos-Uso-Diagram.drawio  Classes-Livros-Builder.drawio  Classes-Login-Usuario-Facade.drawio  Classes-ManipuladorArquivo-Adapter.drawio  Livros-Builder.drawio  Livros-Repository.drawio  Login-Usuario-Facade.drawio  ManipuladorArquivo-Adapter.drawio
notes/: notes.txt  tasks.txt
src/: app  compileAndRun.sh  debug.sh  index.cpp  run.sh  testes.cpp
src/classes/Livro/: Livro.cpp  Livro.h
src/classes/User/: User.cpp  User.hpp
src/classes/Usuario/: Usuario.cpp  Usuario.hpp
src/interfaces/: ManipuladorArquivoInterface.hpp
src/repositories/: LivroRepository.cpp  LivroRepository.h  UsuarioRepository.cpp  UsuarioRepository.h
src/repositories/EmprestimoRepository/: EmprestimoRepository.cpp  EmprestimoRepository.h
src/repositories/LivroRepository/: LivroRepository.cpp  LivroRepository.h
src/repositories/UsuarioRepository/: UsuarioRepository.cpp  UsuarioRepository.h
src/services/: FstreamAdapter.cpp  FstreamAdapter.hpp  ManipuladorArquivo.cpp  ManipuladorArquivo.hpp
src/services/FstreamAdapter/: FstreamAdapter.cpp  FstreamAdapter.hpp
src/services/LoginFacade/: ICommand.h  LoginFacade.cpp  LoginFacade.hpp
src/services/LoginFacade/Comandos/: CadastrarLivroCommand.cpp  CadastrarLivroCommand.h  CadastrarUsuarioCommand.cpp  CadastrarUsuarioCommand.h  ConsultarAcervoCommand.cpp  ConsultarAcervoCommand.h  DevolverLivroCommand.cpp  DevolverLivroCommand.h  ModificarLivroCommand.cpp  ModificarLivroCommand.h  ModificarUsuarioCommand.cpp  ModificarUsuarioCommand.h  RealizarEmprestimoCommand.cpp  RealizarEmprestimoCommand.h  RemoverLivroCommand.cpp  RemoverLivroCommand.h  RemoverUsuarioCommand.cpp  RemoverUsuarioCommand.h  VisualizarPerfilCommand.cpp  VisualizarPerfilCommand.h
src/services/state/: Emprestimo.cpp  Emprestimo.h  EstadoAtrasado.cpp  EstadoAtrasado.h  EstadoConcluido.cpp  EstadoConcluido.h  EstadoEmAndamento.cpp  EstadoEmAndamento.h  EstadoEmprestimo.h
src/utils/: ConsoleUtils.cpp  ConsoleUtils.h
test_livro/: main.cpp
test_login/: main.cpp
test_login_menu/: main.cpp
test_state/: main.cpp
